tests/ui/traits/explicit-reference-cast-hrtb.stderr
error[E0277]: the trait bound `for<'a> Foo: From<&'a String>` is not satisfied
  --> $DIR/explicit-reference-cast-hrtb.rs:12:5
   |
LL |     f();
   |     ^^^ unsatisfied trait bound
   |
help: the trait `for<'a> From<&'a String>` is not implemented for `Foo`
  --> $DIR/explicit-reference-cast-hrtb.rs:3:1
   |
LL | struct Foo;
   | ^^^^^^^^^^
note: required by a bound in `f`
  --> $DIR/explicit-reference-cast-hrtb.rs:7:18
   |
LL | fn f()
   |    - required by a bound in this function
LL | where
LL |     for<'a> Foo: From<&'a String>,
   |                  ^^^^^^^^^^^^^^^^ required by this bound in `f`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
